# python-examples

./: .gitignore  pyproject.toml
src/: boto_moto.py
src/python-examples/unittests/: boto_moto.py
src/python_examples/urllib/: my_urllib.py
