[tool.poetry]
name = "python-examples"
#version = "0.1.0"
#description = ""
authors = ["Radek Drlik <radek.drlik@gmail.com>"]
#readme = "README.md"
package-mode = false
#packages = [
#    { include = "python-examples", from = "src" },
#]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.26"
moto = "^5.0.15"
pytest = "^8.3.3"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
